[package]
authors = ["Judge Maygarden <judge@jmaygarden.com>"]
description = "Serial Line Internet Protocol (SLIP) encoder/decoder"
edition = "2018"
license = "MIT"
name = "slip-codec"
repository = "https://github.com/jmaygarden/slip-codec"
version = "0.2.3"

[features]
default = []
async = ["bytes", "tokio-util"]

[dependencies]
bytes = { version = "1.0", optional = true }
tokio-util = { version ="0.6", features = ["codec"], optional = true }

[dev-dependencies]
futures = "0.3"
futures-sink = "0.3"
serialport = "4.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "tokio-serial"
required-features = ["async"]
